<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0FDFD">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_toolbar_home_activity"
        android:layout_margin="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Menu Button -->
        <ImageView
            android:id="@+id/menu_button"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_menu_vector"
            android:contentDescription="@string/menu_toolbar"
            android:layout_margin="8dp"
            android:layout_gravity="start|center_vertical" />

        <!-- Filters Button -->
        <ImageView
            android:id="@+id/filters_button"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_tune_vector"
            android:contentDescription="@string/tune_toolbar"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="start|center_vertical" />

        <!-- Search EditText -->
        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="213dp"
            android:layout_height="48dp"
            android:hint="@string/search_hint_toolbar"
            android:importantForAutofill="no"
            android:padding="8dp"
            android:inputType="text"
            android:background="@drawable/rounded_edittext_home_activity"
            app:layout_constraintStart_toEndOf="@id/filters_button"
            app:layout_constraintEnd_toStartOf="@id/search_button"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp"/>

        <!-- Profile Picture -->
        <ImageView
            android:id="@+id/profilePicButton"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_account_circle"
            android:contentDescription="@string/profile_toolbar"
            android:layout_margin="8dp"
            android:layout_gravity="end|center_vertical" />

        <!-- Search Button -->
        <ImageView
            android:id="@+id/search_button"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_search_vector"
            android:contentDescription="@string/search_toolbar"
            android:layout_margin="8dp"
            android:layout_gravity="end|center_vertical" />
    </androidx.appcompat.widget.Toolbar>

    <!-- OSMDroid MapView debajo de la Toolbar -->
    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Sección de Título -->
    <TextView
        android:id="@+id/section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/mapView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Lista de elementos -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/section_title"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Barra de navegación inferior -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/white"
        app:menu="@menu/home_activity_bottom_navigation_menu"
        tools:ignore="VisualLintBottomNav" />

</androidx.constraintlayout.widget.ConstraintLayout>
